# fraud-detection

./: .dockerignore  .env.example  .env.kafka  .gitignore  DATABASE_STREAMING_GUIDE.md  Diagrams.md  Dockerfile  Dockerfile.simple  FEEDBACK_MECHANISM_SUMMARY.md  KAFKA_INTEGRATION.md  ML_Explained_For_Young_Minds.md  ML_Technical_Documentation.md  PREDICTION_LOGGING_SUMMARY.md  README.md  UPLOAD_SYSTEM_UPGRADE.md  app.py  data_processor.py  data_simulator.py  database_streamer.py  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  init-db.sql  init.sql  kafka_config.py  kafka_consumer.py  kafka_producer.py  main.py  migrate_database.py  ml_models.py  models.py  pyproject.toml  quick_test.py  replit.md  requirements-simple.txt  requirements.txt  routes.py  scaler.pkl  simple_app.py  start-dev.bat  (+10 more)
attached_assets/: Pasted-Real-Time-Credit-Card-Fraud-Detection-System-Development-Prompt-Project-Overview-Build-a-compreh-1756648212286_1756648212287.txt  creditcard - Copy_1756648231869.csv  creditcard.csv
dashboard/: .eslintrc.json  Dockerfile  Dockerfile.dashboard  nginx.conf  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.css  App.js  App.jsx  index.css
saved_models/: isolation_forest.pkl  logistic_model.pkl  xgboost_model.pkl
src/: __init__.py
templates/: admin.html  base.html  dashboard.html  feedback.html  index.html  kafka_dashboard.html  predict_manual.html  train.html  train_enhanced.html  transactions.html  upload.html  validation.html
tests/: test_api.py  test_models.py  test_streaming.py
(+24 files in other folders)
