[project]
name = "fraud-detection-system"
version = "1.0.0"
description = "Real-time credit card fraud detection system using machine learning"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "joblib>=1.5.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.3.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
